# Homework-23-2

./: .env.sample  .gitignore  README.md  data_groups.json  dump.rdb  pyproject.toml
blog/: models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_blogpost_options_remove_blogpost_updated_at_and_more.py  0003_alter_blogpost_preview.py
blog/templates/blog/: blogpost_confirm_delete.html  blogpost_detail.html  blogpost_form.html  blogpost_list.html
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/fixtures/: moderator_permissions.json
catalog/management/commands/: load_data.py
catalog/migrations/: 0003_alter_category_options_product_views_counter_and_more.py  0004_version.py  0005_product_owner.py  0005_remove_product_views_counter.py  0006_product_views_count_alter_product_purchase_price.py  0007_product_owner.py  0008_alter_product_options_remove_product_views_count_and_more.py  0009_alter_product_options.py  0010_alter_product_options.py
catalog/templates/: base.html  category_list.html  contacts.html  home.html  inc_menu.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html  version_confirm_delete.html  version_form.html
catalog/templatetags/: my_tags.py
config/: settings.py  urls.py
users/: admin.py  forms.py  models.py  views.py
users/migrations/: 0001_initial.py  0002_alter_customuser_options_alter_customuser_email.py
users/templates/users/: activation_invalid.html  login.html  logout.html  password_reset.html  password_reset_done.html  profile_edit.html  (+1 more)
