[tool.poetry]
name = "Homework-23-1"
version = "0.1.0"
description = ""
authors = ["Aleksei Prusikov <imemphatic@yandex.ru>"]
readme = "README.md"
packages = [
    {include = "blog"},
    {include = "catalog"},
    {include = "config"},
    {include = "users"}
]

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.4"
psycopg2 = "^2.9.10"
pillow = "^11.0.0"
ipython = "^8.31.0"
pytils = "^0.4.1"
six = "^1.17.0"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
